<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:layout_margin="20dp"
            android:textSize="15sp"
            />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstNameLabel"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/firstNameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/firstNameHint"
        android:inputType="text"
        />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastNameLabel"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/lastNameBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lastNameHint"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examResultLabel"
            android:layout_marginHorizontal="20dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/resultBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/resultHint"
            android:inputType="number"
            />
    </LinearLayout>
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:onClick="onSubmitClick"
        />
    <TextView
        android:id="@+id/resultDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="18sp"/>
</LinearLayout>